--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -22,6 +22,8 @@
     &__input
       width: 340px      
 @media (max-width: 768px)
+  .logo
+    width: 120px  
   .container
     max-width: 576px
     width: 92%
@@ -46,7 +48,8 @@
         background-color: $text-color
 @media (max-width: 576px)
   .logo
-    width: 99px
+    width: 110px
+ 
       
         
             
