create: breadcrumb and hotel

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -2,4 +2,6 @@
 @import '_settings.sass'
 @import '_normalize.scss'
 @import 'blocks/header'
+@import 'blocks/breadcrumb'
 @import '_media.sass'
+@import 'blocks/_hotel'
