--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -22,6 +22,8 @@
     &__input
       width: 340px      
 @media (max-width: 768px)
+  body
+    background-color: green
   .logo
     width: 120px  
   .container
@@ -46,6 +48,25 @@
         width: 16px
         height: 1px
         background-color: $text-color
+  .stars
+    flex-basis: content    
+  .hotel
+    &-name
+      flex-basis: 100%
+    &-wrapper
+      justify-content: space-between
+    &-info
+      &__offer
+        margin-left: 0
+        order: -1   
+      &__rating
+        display: none
+      &__text
+        width: 100% 
+      &__name
+        margin-top: 10px
+        margin-bottom: 0   
+
 @media (max-width: 576px)
   .logo
     width: 110px
