--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -22,10 +22,6 @@
     &__input
       width: 340px      
 @media (max-width: 768px)
-  body
-    background-color: green
-  .logo
-    width: 120px  
   .container
     max-width: 576px
     width: 92%
@@ -49,7 +45,7 @@
         height: 1px
         background-color: $text-color
   .stars
-    flex-basis: content    
+    flex-basis: auto   
   .hotel
     &-name
       flex-basis: 100%
@@ -67,9 +63,9 @@
         margin-top: 10px
         margin-bottom: 0   
 
-@media (max-width: 576px)
+@media (max-width: 480px)
   .logo
-    width: 110px
+    width: 100px
  
       
         
