--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -5,6 +5,7 @@
     display: flex
     align-items: center
     justify-content: space-between
+    padding-bottom: 20px
     &__offer
       margin-left: 14px
       margin-top: 4px
@@ -26,7 +27,7 @@
     font-size: 12px
     line-height: 15px
 .stars
-  flex-basis: 100%        
+  flex-basis: 100%   
 .offer
   font-size: 10px
   line-height: 13px
@@ -47,6 +48,53 @@
   &__counter
     font-size: 14px
     line-height: 18px
+    font-weight: bold
+  &__fraction
+    font-weight: bold
+    font-size: 10px
+    line-height: 13px
+
+.swiper 
+  width: 100%
+  height: 450px
+  position: relative
+  border-radius: 8px
+  &::after
+    content: ''
+    position: absolute
+    width: 100%
+    height: 100%
+    top: 0
+    right: 0
+    bottom: 0
+    left: 0
+    background: linear-gradient(180deg, rgba(0, 122, 223, 0.48) 0%, rgba(255, 255, 255, 0.128) 100%)
+    z-index: 50
+.slider
+  width: 728px
+  &-button
+    position: absolute
+    top: 50%
+    transform: translateY(-50%)
+    z-index: 100
+    width: 30px
+    height: 30px
+    border: none
+    background-color: transparent
+    cursor: pointer
+    background-repeat: no-repeat
+    background-position: center
+    background-size: 10px
+
+    &--next
+      right: 18px
+      background-image: url(../img/arrow-next.svg)
+
+    &--prev
+      left: 18px     
+      background-image: url(../img/arrow-prev.svg)
+        
+    
       
 
 
