--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -61,7 +61,22 @@
         width: 100% 
       &__name
         margin-top: 10px
-        margin-bottom: 0   
+        margin-bottom: 0 
+  .slider
+    width: 576px
+    height: 380px  
+    
+  .swiper
+    width: 100%
+    height: 100%
+ 
+    &-slide img
+      width: 100%
+      height: 100%
+      object-fit: cover
+
+
+        
 
 @media (max-width: 480px)
   .logo
