--- a/css/style.css
+++ b/css/style.css
@@ -681,6 +681,19 @@ img {
   .search__input {
     width: 340px;
   }
+  .slider {
+    width: 100%;
+  }
+  .swiper {
+    width: 100%;
+    height: 450px;
+  }
+  .swiper-slide img {
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
 }
 
 @media (max-width: 768px) {
@@ -747,7 +760,7 @@ img {
     margin-bottom: 0;
   }
   .slider {
-    width: 576px;
+    width: 100%;
     height: 380px;
   }
   .swiper {
