--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -20,7 +20,18 @@
         line-height: 15px
   .search
     &__input
-      width: 340px      
+      width: 340px 
+
+  .slider
+    width: 100%
+  .swiper
+    width: 100%
+    height: 450px
+    &-slide img
+      width: 100%
+      height: 100%
+      object-fit: cover  
+
 @media (max-width: 768px)
   .container
     max-width: 576px
@@ -63,20 +74,16 @@
         margin-top: 10px
         margin-bottom: 0 
   .slider
-    width: 576px
+    width: 100%
     height: 380px  
     
   .swiper
     width: 100%
     height: 100%
- 
     &-slide img
       width: 100%
       height: 100%
       object-fit: cover
-
-
-        
 
 @media (max-width: 480px)
   .logo
