--- a/css/style.css
+++ b/css/style.css
@@ -623,7 +623,7 @@ img {
 
 .swiper {
   width: 100%;
-  height: 450px;
+  height: 100%;
   position: relative;
   border-radius: 8px;
 }
@@ -644,6 +644,7 @@ img {
 
 .slider {
   width: 728px;
+  height: 450px;
 }
 
 .slider-button {
@@ -803,12 +804,22 @@ img {
 .map {
   width: 347px;
   height: 213px;
-  border-radius: 4px;
+  border-radius: 10px;
+  overflow: hidden;
 }
 
 @media (max-width: 1200px) {
   .container {
     max-width: 960px;
+  }
+  .slider {
+    width: 590px;
+  }
+  .swiper-slide__img {
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
   }
 }
 
@@ -837,12 +848,29 @@ img {
   .search__input {
     width: 340px;
   }
+  .hotel-grid {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .hotel__slider {
+    margin-bottom: 30px;
+  }
+  .hotel-right {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
   .slider {
     width: 100%;
   }
-  .swiper {
-    width: 100%;
-    height: 450px;
+  .booking {
+    width: 340px;
+  }
+  .map {
+    width: 340px;
   }
   .swiper-slide img {
     width: 100%;
@@ -917,23 +945,32 @@ img {
   }
   .slider {
     width: 100%;
-    height: 380px;
+    height: 350px;
   }
-  .swiper {
-    width: 100%;
-    height: 100%;
+  .hotel-right {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    min-height: 450px;
   }
-  .swiper-slide img {
+  .booking {
     width: 100%;
-    height: 100%;
-    -o-object-fit: cover;
-       object-fit: cover;
+  }
+  .map {
+    width: 100%;
   }
 }
 
 @media (max-width: 480px) {
   .logo {
     width: 100px;
+  }
+  .slider {
+    height: 250px;
+  }
+  .hotel__slider {
+    margin-bottom: 20px;
   }
 }
 /*# sourceMappingURL=style.css.map */
