--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,6 +1,14 @@
 @media (max-width: 1200px)
   .container
     max-width: 960px
+  .slider
+    width: 590px  
+  .swiper
+      &-slide 
+        &__img
+          width: 100%
+          height: 100%
+          object-fit: cover
 @media ( max-width: 992px )
   .container
     max-width: 760px
@@ -21,12 +29,21 @@
   .search
     &__input
       width: 340px 
-
+  .hotel
+    &-grid 
+      flex-direction: column 
+    &__slider
+      margin-bottom: 30px 
+    &-right
+      flex-direction: row     
   .slider
     width: 100%
+  .booking
+    width: 340px  
+  .map
+    width: 340px
+  
   .swiper
-    width: 100%
-    height: 450px
     &-slide img
       width: 100%
       height: 100%
@@ -75,19 +92,28 @@
         margin-bottom: 0 
   .slider
     width: 100%
-    height: 380px  
-    
-  .swiper
+    height: 350px
+  .hotel
+    &-right
+      flex-direction: column
+      min-height: 450px
+  .booking
     width: 100%
-    height: 100%
-    &-slide img
-      width: 100%
-      height: 100%
-      object-fit: cover
+  .map
+    width: 100%      
+
+    
+
+
 
 @media (max-width: 480px)
   .logo
     width: 100px
+  .slider
+    height: 250px 
+  .hotel
+    &__slider
+      margin-bottom: 20px   
  
       
         
