--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -64,7 +64,7 @@
 
 .swiper 
   width: 100%
-  height: 450px
+  height: 100%
   position: relative
   border-radius: 8px
   &::after
@@ -80,6 +80,7 @@
     z-index: 50
 .slider
   width: 728px
+  height: 450px
   &-button
     position: absolute
     top: 50%
@@ -178,7 +179,8 @@
 .map
   width: 347px
   height: 213px  
-  border-radius: 4px
+  border-radius: 10px
+  overflow: hidden
 
 
 
