--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -1,6 +1,7 @@
 .hotel
   padding-top: 23px
   padding-bottom: 70px
+
   &-info
     display: flex
     align-items: center
@@ -33,6 +34,49 @@
     display: flex
     flex-direction: column
     justify-content: space-between
+  &-slider
+    width: 728px
+    height: 450px
+    margin-left: 0
+    &__item
+      width: 100%
+      height: 100%
+      position: relative
+      border-radius: 8px
+      overflow: hidden
+      &::after
+        content: ''
+        position: absolute
+        width: 100%
+        height: 100%
+        top: 0
+        right: 0
+        bottom: 0
+        left: 0
+        background: linear-gradient(180deg, rgba(0, 122, 223, 0.48) 0%, rgba(255, 255, 255, 0.128) 100%)
+        z-index: 50
+
+    &__button
+      position: absolute
+      top: 50%
+      transform: translateY(-50%)
+      z-index: 100
+      width: 30px
+      height: 30px
+      border: none
+      background-color: transparent
+      cursor: pointer
+      background-repeat: no-repeat
+      background-position: center
+      background-size: 10px
+      &--next
+        right: 18px
+        background-image: url(../img/arrow-next.svg)
+      &--prev
+        left: 18px     
+        background-image: url(../img/arrow-prev.svg)  
+  
+
 
 .stars
   flex-basis: 100%   
@@ -62,46 +106,7 @@
     font-size: 10px
     line-height: 13px
 
-.swiper 
-  width: 100%
-  height: 100%
-  position: relative
-  border-radius: 8px
-  &::after
-    content: ''
-    position: absolute
-    width: 100%
-    height: 100%
-    top: 0
-    right: 0
-    bottom: 0
-    left: 0
-    background: linear-gradient(180deg, rgba(0, 122, 223, 0.48) 0%, rgba(255, 255, 255, 0.128) 100%)
-    z-index: 50
-.slider
-  width: 728px
-  height: 450px
-  &-button
-    position: absolute
-    top: 50%
-    transform: translateY(-50%)
-    z-index: 100
-    width: 30px
-    height: 30px
-    border: none
-    background-color: transparent
-    cursor: pointer
-    background-repeat: no-repeat
-    background-position: center
-    background-size: 10px
-
-    &--next
-      right: 18px
-      background-image: url(../img/arrow-next.svg)
-
-    &--prev
-      left: 18px     
-      background-image: url(../img/arrow-prev.svg)
+ 
 .booking
   background-color: $dark
   color: $light
@@ -181,6 +186,7 @@
   height: 213px  
   border-radius: 10px
   overflow: hidden
+
 
 
 
