--- a/sass/style.sass
+++ b/sass/style.sass
@@ -5,4 +5,5 @@
 @import 'blocks/breadcrumb'
 @import 'blocks/hotel'
 @import 'blocks/newsletter'
+@import 'blocks/_reviews.sass'
 @import '_media.sass'
