--- a/css/style.css
+++ b/css/style.css
@@ -919,7 +919,7 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 730px;
+  max-width: 730px;
   margin: 45px auto 0;
   background-color: #fff;
   border-radius: 8px;
@@ -1036,13 +1036,16 @@ img {
 }
 
 @media (max-width: 1200px) {
+  body {
+    background-color: blue;
+  }
   .container {
     max-width: 960px;
   }
-  .slider {
+  .hotel-slider {
     width: 590px;
   }
-  .swiper-slide__img {
+  .hotel-slider__img {
     width: 100%;
     height: 100%;
     -o-object-fit: cover;
@@ -1051,6 +1054,9 @@ img {
 }
 
 @media (max-width: 992px) {
+  body {
+    background: red;
+  }
   .container, .newsletter-wrapper {
     max-width: 700px;
   }
@@ -1090,7 +1096,7 @@ img {
         -ms-flex-direction: row;
             flex-direction: row;
   }
-  .slider {
+  .hotel-slider {
     width: 100%;
   }
   .booking {
@@ -1099,15 +1105,21 @@ img {
   .map {
     width: 340px;
   }
-  .swiper-slide img {
+  .map-slide img {
     width: 100%;
     height: 100%;
     -o-object-fit: cover;
        object-fit: cover;
   }
+  .reviews-slider__item {
+    max-width: 580px;
+  }
 }
 
 @media (max-width: 767px) {
+  body {
+    background: green;
+  }
   .container {
     max-width: 576px;
     width: 92%;
@@ -1170,16 +1182,16 @@ img {
     margin-top: 10px;
     margin-bottom: 0;
   }
-  .slider {
-    width: 100%;
-    height: 350px;
-  }
   .hotel-right {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
     min-height: 450px;
+  }
+  .hotel-slider {
+    width: 100%;
+    height: 350px;
   }
   .booking {
     width: 100%;
@@ -1198,13 +1210,34 @@ img {
         -ms-flex-align: start;
             align-items: flex-start;
   }
+  .reviews-slider__item {
+    padding: 0 30px 30px;
+  }
+  .reviews-slider__item:after, .reviews-slider__item:before {
+    display: none;
+  }
+  .reviews-slider__button {
+    top: 45px;
+  }
+  .reviews-slider__button--prev {
+    left: 50%;
+    margin-left: -85px;
+    -webkit-transform: translate(-50, 0);
+            transform: translate(-50, 0);
+  }
+  .reviews-slider__button--next {
+    right: 50%;
+    -webkit-transform: translate(50, 0);
+            transform: translate(50, 0);
+    margin-right: -85px;
+  }
 }
 
 @media (max-width: 480px) {
   .logo {
     width: 100px;
   }
-  .slider {
+  .hotel {
     height: 250px;
   }
   .hotel__slider {
