--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,15 +1,19 @@
 @media (max-width: 1200px)
+  body
+    background-color: blue
   .container
     max-width: 960px
-  .slider
-    width: 590px  
-  .swiper
-      &-slide 
-        &__img
-          width: 100%
-          height: 100%
-          object-fit: cover
+  .hotel
+    &-slider
+      width: 590px  
+    &-slider 
+      &__img
+        width: 100%
+        height: 100%
+        object-fit: cover
 @media ( max-width: 992px )
+  body
+    background: red
   .container, .newsletter-wrapper
     max-width: 700px
   .logo
@@ -36,20 +40,26 @@
       margin-bottom: 30px 
     &-right
       flex-direction: row     
-  .slider
-    width: 100%
+    &-slider
+      width: 100%
   .booking
     width: 340px  
   .map
     width: 340px
-  
-  .swiper
+    .swiper
     &-slide img
       width: 100%
       height: 100%
       object-fit: cover  
 
+  .reviews
+    &-slider
+      &__item
+        max-width: 580px    
+
 @media (max-width: 767px)
+  body
+    background: green
   .container
     max-width: 576px
     width: 92%
@@ -90,18 +100,18 @@
       &__name
         margin-top: 10px
         margin-bottom: 0 
-  .slider
-    width: 100%
-    height: 350px
+
   .hotel
     &-right
       flex-direction: column
       min-height: 450px
+    &-slider
+      width: 100%
+      height: 350px  
   .booking
     width: 100%
   .map
     width: 100%      
-
     
 
   .newsletter
@@ -110,13 +120,29 @@
       width: 92%
       flex-direction: column
       align-items: flex-start
+  .reviews
+    &-slider
+      &__item
+        padding: 0 30px 30px 
+        &:after, &:before
+          display: none  
+      &__button
+        top: 45px
+        &--prev
+          left: 50%
+          margin-left: -85px
+          transform: translate(-50, 0)
+        &--next
+          right: 50%
+          transform: translate(50, 0)
+          margin-right: -85px
 
 @media (max-width: 480px)
   .logo
     width: 100px
-  .slider
-    height: 250px 
   .hotel
+    &-slider
+    height: 250px 
     &__slider
       margin-bottom: 20px  
   .newsletter
