--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -54,13 +54,14 @@
     line-height: 18px
   &__button
     position: absolute
-    min-width: 65px
+    width: 65px
     right: 0
     top: 0
     height: 100%
     border: none  
     background-color: $primary
     color: $light
+    
 
 
 
