--- a/sass/blocks/_reviews.sass
+++ b/sass/blocks/_reviews.sass
@@ -1,5 +1,7 @@
 .reviews
   padding: 40px 0 70px 0
+  &-title
+    margin-bottom: 70px
   &__title
     font-style: normal
     font-weight: bold
@@ -7,7 +9,7 @@
     line-height: 45px
     text-align: center
     text-transform: uppercase
-    margin-bottom: 70px
+    
   &-slider
     &__item
       position: relative
@@ -38,6 +40,8 @@
         height: 47px
         background-image: url(../img/quote_r.svg)
         background-repeat: no-repeat
+    &__username
+      text-align: center  
         
     &__button
       position: absolute
