--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,19 +1,16 @@
 @media (max-width: 1200px)
-  body
-    background-color: blue
+
   .container
     max-width: 960px
   .hotel
     &-slider
       width: 590px  
-    &-slider 
       &__img
         width: 100%
         height: 100%
         object-fit: cover
 @media ( max-width: 992px )
-  body
-    background: red
+
   .container, .newsletter-wrapper
     max-width: 700px
   .logo
@@ -55,11 +52,14 @@
   .reviews
     &-slider
       &__item
-        max-width: 580px    
+        max-width: 580px   
+    &__title
+      font-size: 30px
+      line-height: 38px     
+      
 
 @media (max-width: 767px)
-  body
-    background: green
+
   .container
     max-width: 576px
     width: 92%
@@ -136,13 +136,17 @@
           right: 50%
           transform: translate(50, 0)
           margin-right: -85px
+    &__title
+      font-size: 18px
+      line-height: 23px      
 
 @media (max-width: 480px)
+
   .logo
     width: 100px
   .hotel
     &-slider
-    height: 250px 
+      height: 250px 
     &__slider
       margin-bottom: 20px  
   .newsletter
@@ -150,7 +154,16 @@
     &__title
       margin-bottom: 37px 
   .subscribe 
-    width: 100%    
+    width: 100%  
+  .reviews
+    &-title
+      margin: auto
+      max-width: 245px  
+      margin-bottom: 40px
+    
+    &-slider
+      &__item
+        max-width: 280px    
  
       
         
