create: section activities

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -9,8 +9,11 @@
         width: 100%
         height: 100%
         object-fit: cover
-@media ( max-width: 992px )
+  .card  
+    width: 230px
+    height: 230px
 
+@media ( max-width: 992px )
   .container, .newsletter-wrapper
     max-width: 700px
   .logo
@@ -55,8 +58,17 @@
         max-width: 580px   
     &__title
       font-size: 30px
-      line-height: 38px     
-      
+      line-height: 38px   
+
+  .activities
+    &-wrapper
+      flex-wrap: wrap  
+    &__card
+      margin-bottom: 20px
+
+  .card
+    width: 340px
+    height: 250px   
 
 @media (max-width: 767px)
 
@@ -138,7 +150,14 @@
           margin-right: -85px
     &__title
       font-size: 18px
-      line-height: 23px      
+      line-height: 23px  
+  .activities
+    padding-top: 40px
+    padding-bottom: 60px
+
+  .card
+    width: 49%
+    height: 255px        
 
 @media (max-width: 480px)
 
@@ -164,6 +183,8 @@
     &-slider
       &__item
         max-width: 280px    
+  .card
+    width: 100%
  
       
         
