--- a/sass/style.sass
+++ b/sass/style.sass
@@ -6,4 +6,5 @@
 @import 'blocks/hotel'
 @import 'blocks/newsletter'
 @import 'blocks/_reviews.sass'
+@import 'blocks/_activities.sass'
 @import '_media.sass'
