--- a/sass/blocks/_reviews.sass
+++ b/sass/blocks/_reviews.sass
@@ -53,7 +53,7 @@
       background-size: 10px
       background-position: center
       border: none
-      background-color: transporent
+      background-color: transparent
       cursor: pointer
       z-index: 100
       &--prev
