--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -46,6 +46,8 @@
     width: 340px  
   .map
     width: 340px
+  .map iframe
+    width: 100%    
     .swiper
     &-slide img
       width: 100%
@@ -123,7 +125,9 @@
   .booking
     width: 100%
   .map
-    width: 100%      
+    width: 100% 
+  .map iframe
+    width: 100%       
     
 
   .newsletter
