--- a/css/style.css
+++ b/css/style.css
@@ -810,6 +810,69 @@ img {
   overflow: hidden;
 }
 
+.other {
+  margin-bottom: 70px;
+}
+
+.other-title {
+  margin: 0;
+  padding-bottom: 40px;
+}
+
+.other-grid {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: 50px repeat 2, 470px;
+      grid-template-rows: 50px repeat 2, 470px;
+  -ms-grid-columns: repeat 3, 1fr;
+      grid-template-columns: repeat 3, 1fr;
+  grid-gap: 15px;
+}
+
+.other-grid__container-1 {
+  max-width: 365px;
+  max-height: 470px;
+}
+
+.other-grid__item-title {
+  text-align: center;
+  text-transform: uppercase;
+  -ms-grid-row: 1;
+      grid-row-start: 1;
+  grid-row-end: 2;
+  -ms-grid-column: 1;
+      grid-column-start: 1;
+  grid-column-end: 4;
+}
+
+.other-grid__item-1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-grid-row: 2;
+      grid-row-start: 2;
+  grid-row-end: 3;
+  -ms-grid-column: 1;
+      grid-column-start: 1;
+  grid-column-end: 3;
+}
+
+.other-grid__item-3 {
+  -ms-grid-row: 2;
+      grid-row-start: 2;
+  grid-row-end: 3;
+  -ms-grid-column: 3;
+      grid-column-start: 3;
+  grid-column-end: 4;
+}
+
+.pack {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 .newsletter {
   position: relative;
   padding: 98px 0 87px 0;
@@ -1131,6 +1194,9 @@ img {
 }
 
 @media (max-width: 1200px) {
+  .other {
+    display: none;
+  }
   .container {
     max-width: 960px;
   }
