create: added footer section

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -7,4 +7,5 @@
 @import 'blocks/newsletter'
 @import 'blocks/_reviews.sass'
 @import 'blocks/_activities.sass'
+@import 'blocks/_footer.sass'
 @import '_media.sass'
