--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -13,8 +13,15 @@
   .card  
     width: 230px
     height: 230px
+  .footer
+    &__input
+      flex-basis: 100%  
+
+
 
 @media ( max-width: 992px )
+  body
+    background-color: blue
   .container, .newsletter-wrapper
     max-width: 700px
   .logo
@@ -72,9 +79,47 @@
   .card
     width: 340px
     height: 250px   
+  
+  .footer
+    &__logo
+      grid-row: 1 / 2
+      grid-column: span 2
+    &-wrapper
+      grid-template-columns: repeat(6, 1fr)
+      grid-row-gap: 40px
+
+    &__social
+      &-network
+        grid-row: 1 / 2
+        grid-column: span 4
+        align-self: center
+    &__categories    
+      grid-row: 2 / 3
+      grid-column: span 2
+    &__legal
+      grid-column: span 2  
+    &__additional
+      grid-column: span 2  
+    &__contact
+      &-details
+        grid-row: 3
+        grid-column: span 5
+      &-form
+        grid-row: 4  
+        grid-column: span 5
+    &__input
+      flex-basis: 100%  
+    &-bottom
+      justify-content: space-between
+      &__text
+        padding-right: 0 
+
+
+
 
 @media (max-width: 767px)
-
+  body
+    background-color: green
   .container
     max-width: 576px
     width: 92%
@@ -162,9 +207,26 @@
 
   .card
     width: 49%
-    height: 255px        
+    height: 255px  
+
+  .footer
+
+    &__contact
+      &-details
+        grid-row: 3
+        grid-column: span 5
+      &-form
+        grid-row: 4
+        grid-column: span 5     
+
+    &__input
+      width: 100%
+    &__message
+      width: 100%
 
 @media (max-width: 480px)
+  body
+    background-color: yellow
 
   .logo
     width: 100px
@@ -190,7 +252,50 @@
         max-width: 280px    
   .card
     width: 100%
- 
+
+  .footer  
+    &-wrapper
+      grid-template-columns: 1fr
+    &__logo
+      grid-row: 1
+      grid-column: 1
+    &__social
+      &-network
+        grid-row: 2
+        grid-column: 1
+    &__contact
+      &-details
+        grid-row: 6
+        grid-column: 1
+      &-form
+        grid-row: 7
+        grid-column: 1       
+    &__additional    
+      grid-row: 3
+      grid-column: 1
+    &__categories
+      grid-row: 4
+      grid-column: 1
+    &__legal
+      grid-row: 5
+      grid-column: 1
+    &__input
+      flex-basis: 100% 
+    &__message
+      flex-basis: 100% 
+      margin-bottom: 15px
+    &__button
+      order: 4  
+    &__info
+      flex-basis: 100%
+      margin-bottom: 15px
+    &-bottom
+      flex-wrap: wrap
+      justify-content: start
+      margin: 0
+      &__text
+        padding: 40px 0 15px 0   
+      
       
         
             
