--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -108,5 +108,14 @@
     font-size: 12px
     line-height: 15px
     color: #E0E0E0
+  &-bottom
+    display: flex
+    justify-content: flex-end
+    margin-top: 70px
+    &__text
+      margin-right: 20vw
+    &__img
+      width: 136px
+      height: 22px  
       
 
