create: mobile menu

--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -28,6 +28,11 @@
       font-weight: bold
       font-size: 14px
       line-height: 18px
+    &__item
+      &--mobile
+        &_visible
+          display: none
+ 
 .logo
   width: 177px     
 .search
@@ -68,6 +73,7 @@
     font-size: 14px
     line-height: 18px
     color: $text-color  
+       
 
 
 
