--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -20,8 +20,7 @@
 
 
 @media ( max-width: 992px )
-  body
-    background-color: blue
+
   .container, .newsletter-wrapper
     max-width: 700px
   .logo
@@ -118,14 +117,48 @@
 
 
 @media (max-width: 767px)
-  body
-    background-color: green
+
   .container
     max-width: 576px
     width: 92%
+  body
+    padding-top: 78px  
   .navbar
-    &__search, &-menu, &__user
-      display: none
+    &--mobile
+      &_fixed
+        height: 78px
+        position: fixed
+        left: 0
+        top: 0
+        right: 0
+        bottom: 0
+        z-index: 100
+    &__user, &__search
+      &--mobile
+        &_hidden
+          display: none
+        &_visible
+          display: flex  
+    &__user
+      flex-direction: column  
+      justify-content: center    
+    &-bottom
+      display: none  
+      position: fixed
+      left: 0
+      right: 0
+      bottom: 0
+      top: 78px
+      padding-top: 30px
+      &--visible
+        display: block
+    &-menu
+      flex-direction: column  
+      &__item
+        margin-bottom: 20px  
+        &--mobile
+          &_visible
+            display: block
   .menu
     &-button
       display: flex
@@ -142,6 +175,13 @@
         width: 16px
         height: 1px
         background-color: $text-color
+  .user
+    &__name
+      &--light
+        color: $light
+        margin-left: 0
+        margin-top: 10px
+
   .stars
     flex-basis: auto   
   .hotel
@@ -225,9 +265,7 @@
       width: 100%
 
 @media (max-width: 480px)
-  body
-    background-color: yellow
-
+  
   .logo
     width: 100px
   .hotel
