--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -114,6 +114,7 @@
     margin-top: 70px
     &__text
       margin-right: 20vw
+      color: $footer-text-color
     &__img
       width: 136px
       height: 22px  
