--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -9,6 +9,41 @@ body
   margin: auto
 img
   max-width: 100%
+.input  
+  background-color: #fff
+  border-radius: 4px
+  border: none
+  padding: 0 23px
+  height: 50px
+.input::placeholder
+  font-style: normal
+  font-weight: normal
+  font-size: 12px
+  line-height: 15px
+  color: $footer-text-color   
+.message
+  background-color: #fff  
+  border-radius: 4px
+  padding: 18px 23px
+  border: none
+.message::placeholder
+  font-style: normal
+  font-weight: normal
+  font-size: 12px
+  line-height: 15px
+  color: $footer-text-color  
+.button
+  min-width: 160px
+  min-height: 50px
+  padding: 18px
+  font-style: normal
+  font-weight: bold
+  font-size: 12px
+  line-height: 15px
+  color: $light
+  background-color: $primary
+  border: none
+  border-radius: 4px  
 
 
 
