--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -10,7 +10,7 @@
     grid-auto-rows: minmax(40px, min-content)
     align-items: start
   &__logo
-    width: 166px
+    display: flex
     grid-row: 1 / 3  
     align-self: stretch
   &__categories
@@ -31,12 +31,14 @@
       grid-column: span 2 
     &-form
       grid-column: span 2  
+      margin-bottom: 102px  
+
   &__form
     display: flex
     align-items: center
     justify-content: space-between
     flex-wrap: wrap         
-
+ 
   &__ul
     padding: 0
     margin: 0
@@ -72,51 +74,40 @@
     text-decoration: none    
     color: inherit
   &__input  
-    background-color: #fff
-    border-radius: 4px
-    border: none
-    padding: 0 23px
-    height: 50px
     margin-bottom: 15px
     flex-basis: 48%
   &__message
     resize: both
     width: 539px
     height: 123px
-    background-color: #fff  
-    border-radius: 4px
-    padding: 18px 23px
-    border: none
     flex-basis: 100%
     margin-bottom: 23px
 
-  &__button
-    min-width: 160px
-    min-height: 50px
-    padding: 18px
+  &__bottom-text
+    display: flex
+    justify-content: center
+    grid-column: 2 / 4
+  &__policy
     font-style: normal
-    font-weight: bold
+    font-weight: normal
     font-size: 12px
     line-height: 15px
     color: $light
-    background-color: $primary
-    border: none
-    border-radius: 4px
+  &__bottom-img  
+    display: flex
+    justify-content: flex-end
+  &__img5
+    width: 136px
+    height: 22px 
+
+.logo
+  width: 166px   
   &__info
     font-style: normal
     font-weight: bold
     font-size: 12px
     line-height: 15px
-    color: #E0E0E0
-  &-bottom
-    display: flex
-    justify-content: flex-end
-    margin-top: 70px
-    &__text
-      margin-right: 20vw
-      color: $footer-text-color
-    &__img
-      width: 136px
-      height: 22px  
+    color: #E0E0E0     
+     
       
 
