--- a/sass/style.sass
+++ b/sass/style.sass
@@ -8,4 +8,5 @@
 @import 'blocks/_reviews.sass'
 @import 'blocks/_activities.sass'
 @import 'blocks/_footer.sass'
+@import 'blocks/_modal.sass'
 @import '_media.sass'
