--- a/css/style.css
+++ b/css/style.css
@@ -1297,7 +1297,7 @@ img {
 
 .footer__contact-form {
   grid-column: span 2;
-  margin-bottom: 102px;
+  margin-bottom: 62px;
 }
 
 .footer__form {
@@ -1384,27 +1384,55 @@ img {
   margin-bottom: 23px;
 }
 
+.footer__bottom-wrap {
+  -ms-grid-row: 5;
+  grid-row: 5;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 4;
+  grid-column: 1 / 5;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.footer__bottom-blank {
+  width: 20%;
+}
+
 .footer__bottom-text {
+  width: 60%;
+}
+
+.footer__bottom-list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 2;
-  grid-column: 2 / 4;
+  min-width: 100px;
+  padding: 0;
+  margin: 0;
+  list-style: none;
 }
 
-.footer__policy {
+.footer__bottom-link {
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
   font-style: normal;
   font-weight: normal;
   font-size: 12px;
   line-height: 15px;
   color: #ffffff;
+  padding-right: 10px;
 }
 
 .footer__bottom-img {
+  margin: 0;
+  padding: 0;
+  width: 20%;
+  min-width: 136px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1638,23 +1666,35 @@ img {
     -ms-grid-row: 4;
     grid-row: 4;
     grid-column: span 5;
+    margin-bottom: 0;
   }
   .footer__input {
     -ms-flex-preferred-size: 100%;
         flex-basis: 100%;
   }
-  .footer-bottom {
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+  .footer__bottom-wrap {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 6;
+    grid-column: 1 / 7;
   }
-  .footer-bottom__text {
-    padding-right: 0;
+  .footer__bottom-blank {
+    display: none;
   }
   .footer__bottom-text {
-    -ms-grid-column: 2;
-    -ms-grid-column-span: 4;
-    grid-column: 2 / 6;
+    width: 100%;
+    margin-bottom: 10px;
+  }
+  .footer__bottom-list {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
+  .footer__bottom-img {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
   }
 }
 
@@ -1703,6 +1743,9 @@ img {
   }
   .navbar-bottom--visible {
     display: block;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    white-space: nowrap;
   }
   .navbar-menu {
     -webkit-box-orient: vertical;
@@ -1858,14 +1901,6 @@ img {
   }
 }
 
-@media (max-width: 767px) {
-  .navbar-bottom--visible {
-    overflow-x: hidden;
-    overflow-y: scroll;
-    white-space: nowrap;
-  }
-}
-
 @media (max-width: 480px) {
   .logo {
     width: 100px;
@@ -1961,25 +1996,6 @@ img {
     -ms-flex-preferred-size: 100%;
         flex-basis: 100%;
     margin-bottom: 15px;
-  }
-  .footer__bottom-text {
-    -ms-grid-row: 8;
-    grid-row: 8;
-    -ms-grid-column: 1;
-    grid-column: 1;
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
-    -webkit-box-align: end;
-        -ms-flex-align: end;
-            align-items: flex-end;
-    -ms-flex-line-pack: end;
-        align-content: flex-end;
-  }
-  .footer__bottom-img {
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
   }
 }
 /*# sourceMappingURL=style.css.map */
