--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -280,6 +280,19 @@
     &__message
       width: 100%
 
+.modal
+  &__title
+    font-size: 14px
+  &__dialog
+    max-width: 378px
+    padding: 23px 58px      
+  &__input
+    padding: 0 15px
+    max-height: 30px 
+  &__message  
+    min-height: 50px
+  &__button
+    margin-bottom: 8px  
 
 @media (max-width: 480px)
   
