--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -9,6 +9,7 @@ body
   margin: auto
 img
   max-width: 100%
+    
 .input  
   background-color: #fff
   border-radius: 4px
@@ -44,6 +45,11 @@ img
   background-color: $primary
   border: none
   border-radius: 4px  
+form
+  display: flex
+  align-items: center
+  justify-content: space-between
+  flex-wrap: wrap   
 
 
 
