--- a/sass/blocks/_modal.sass
+++ b/sass/blocks/_modal.sass
@@ -1,4 +1,5 @@
 .modal
+  
   &__overlay
     position: fixed
     left: 0
@@ -9,6 +10,10 @@
     z-index: 110
     visibility: hidden
     opacity: 0
+    transition: 0.2s
+    &--visible
+      visibility: visible
+      opacity: 1
   &__dialog
     position: fixed
     top: 50%
@@ -22,6 +27,10 @@
     z-index: 111
     visibility: hidden
     opacity: 0
+    transition: 0.2s
+    &--visible
+      visibility: visible
+      opacity: 1
   &__close
     position: absolute
     right: 18px
