--- a/sass/blocks/_modal.sass
+++ b/sass/blocks/_modal.sass
@@ -18,7 +18,8 @@
     position: fixed
     top: 50%
     left: 50%
-    max-width: 478px
+    width: 478px
+    height: 486px
     padding: 33px 88px
     background-color: $dark
     transform: translate(-50%, -50%)
@@ -46,8 +47,9 @@
     text-transform: uppercase   
     text-align: center 
   &__input
-    width: 100%
-    margin-bottom: 15px  
+    margin-bottom: 15px 
+    width: 302px
+    height: 50px      
   &__message
     width: 100%
     min-height: 123px
