--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -78,6 +78,11 @@
     height: 123px
     flex-basis: 100%
     margin-bottom: 23px
+  &__info  
+    font-style: normal
+    font-weight: bold
+    font-size: 12px
+    line-height: 15px
   
   &__bottom
     &-wrap
