create: form field mask jQuery

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -15,7 +15,8 @@
     height: 230px
   .footer
     &__input
-      flex-basis: 100%  
+      &-group
+        flex-basis: 100%  
 
 
 
@@ -108,7 +109,8 @@
         grid-column: span 5
         margin-bottom: 0
     &__input
-      flex-basis: 100%  
+      &-group      
+        flex-basis: 100%  
     &__bottom
       &-wrap
         flex-wrap: wrap
@@ -134,8 +136,6 @@
       padding: 9px
 
 @media (max-width: 767px)
-
-
   .container
     max-width: 576px
     width: 92%
@@ -286,7 +286,8 @@
         grid-column: span 5     
 
     &__input
-      width: 100%
+      &-group     
+        width: 100%
     &__message
       width: 100%
 
@@ -361,7 +362,8 @@
       grid-row: 5
       grid-column: 1
     &__input
-      flex-basis: 100% 
+      &-group
+        flex-basis: 100% 
     &__message
       flex-basis: 100% 
       margin-bottom: 15px
