--- a/css/style.css
+++ b/css/style.css
@@ -452,6 +452,7 @@ img {
   background-color: #EC1F46;
   border: none;
   border-radius: 4px;
+  cursor: pointer;
 }
 
 form {
@@ -466,6 +467,10 @@ form {
           justify-content: space-between;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+}
+
+.invalid {
+  color: #EC1F46;
 }
 
 .navbar {
@@ -981,16 +986,22 @@ form {
 }
 
 .subscribe__input {
-  position: absolute;
+  border: none;
   width: 100%;
   height: 100%;
-  border: none;
   padding-left: 33px;
   padding-right: 75px;
   font-style: normal;
   font-weight: 300;
   font-size: 14px;
   line-height: 18px;
+  z-index: -1;
+}
+
+.subscribe__input-out {
+  width: 100%;
+  height: 100%;
+  z-index: 1;
 }
 
 .subscribe__button {
@@ -1002,6 +1013,7 @@ form {
   border: none;
   background-color: #EC1F46;
   color: #ffffff;
+  z-index: 2;
 }
 
 .reviews {
@@ -1370,6 +1382,10 @@ form {
 }
 
 .footer__input {
+  width: 100%;
+}
+
+.footer__input-group {
   margin-bottom: 15px;
   -ms-flex-preferred-size: 48%;
       flex-basis: 48%;
@@ -1489,7 +1505,7 @@ form {
   top: 50%;
   left: 50%;
   width: 478px;
-  height: 486px;
+  min-height: 486px;
   padding: 33px 88px;
   background-color: #0A223D;
   -webkit-transform: translate(-50%, -50%);
@@ -1527,7 +1543,7 @@ form {
 }
 
 .modal__input {
-  margin-bottom: 15px;
+  margin-top: 15px;
   width: 302px;
   height: 50px;
 }
@@ -1535,7 +1551,11 @@ form {
 .modal__message {
   width: 100%;
   min-height: 123px;
-  margin-bottom: 15px;
+  margin-top: 15px;
+}
+
+.modal__button {
+  margin-top: 15px;
 }
 
 .modal__info {
@@ -1566,7 +1586,7 @@ form {
     width: 230px;
     height: 230px;
   }
-  .footer__input {
+  .footer__input-group {
     -ms-flex-preferred-size: 100%;
         flex-basis: 100%;
   }
@@ -1691,7 +1711,7 @@ form {
     grid-column: span 5;
     margin-bottom: 0;
   }
-  .footer__input {
+  .footer__input-group {
     -ms-flex-preferred-size: 100%;
         flex-basis: 100%;
   }
@@ -1926,7 +1946,7 @@ form {
     grid-row: 4;
     grid-column: span 5;
   }
-  .footer__input {
+  .footer__input-group {
     width: 100%;
   }
   .footer__message {
@@ -2026,7 +2046,7 @@ form {
     -ms-grid-column: 1;
     grid-column: 1;
   }
-  .footer__input {
+  .footer__input-group {
     -ms-flex-preferred-size: 100%;
         flex-basis: 100%;
   }
