--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -45,11 +45,14 @@ img
   background-color: $primary
   border: none
   border-radius: 4px  
+  cursor: pointer
 form
   display: flex
   align-items: center
   justify-content: space-between
-  flex-wrap: wrap   
+  flex-wrap: wrap 
+.invalid
+  color: $primary    
 
 
 
