--- a/sass/blocks/_modal.sass
+++ b/sass/blocks/_modal.sass
@@ -19,7 +19,7 @@
     top: 50%
     left: 50%
     width: 478px
-    height: 486px
+    min-height: 486px
     padding: 33px 88px
     background-color: $dark
     transform: translate(-50%, -50%)
@@ -47,13 +47,16 @@
     text-transform: uppercase   
     text-align: center 
   &__input
-    margin-bottom: 15px 
+    margin-top: 15px 
     width: 302px
     height: 50px      
   &__message
     width: 100%
     min-height: 123px
-    margin-bottom: 15px
+    margin-top: 15px
+  &__button
+    margin-top: 15px
+
   &__info
     font-style: normal
     font-weight: bold
