fix: modal and footer form

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -347,10 +347,10 @@
     &__contact
       &-details
         grid-row: 6
-        grid-column: 1
+        grid-column: 1 / 7
       &-form
         grid-row: 7
-        grid-column: 1   
+        grid-column: 1 / 7  
         margin-bottom: 15px    
     &__additional    
       grid-row: 3
