--- a/sass/blocks/_modal.sass
+++ b/sass/blocks/_modal.sass
@@ -19,7 +19,7 @@
     top: 50%
     left: 50%
     width: 478px
-    min-height: 486px
+    
     padding: 33px 88px
     background-color: $dark
     transform: translate(-50%, -50%)
@@ -46,6 +46,7 @@
     margin-bottom: 15px
     text-transform: uppercase   
     text-align: center 
+    margin-top: 0
   &__input
     margin-top: 15px 
     width: 302px
