--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -41,6 +41,7 @@
   overflow: hidden
 
   &__input
+    position: absolute
     border: none
     width: 100%
     height: 100%
@@ -50,11 +51,11 @@
     font-weight: 300
     font-size: 14px
     line-height: 18px
-    z-index: -1
     &-out
+      display: flex
+      flex-direction: column
       width: 100%
       height: 100%
-      z-index: 1
 
   &__button
     position: absolute
@@ -65,7 +66,6 @@
     border: none  
     background-color: $primary
     color: $light
-    z-index: 2
     
 
 
