--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -60,6 +60,9 @@
     right: 0
     background-color: $primary
     border: none
+.button
+  padding-top: 12px
+  padding-button: 7px    
 .user
   display: flex
   align-items: center
