--- a/sass/blocks/_reviews.sass
+++ b/sass/blocks/_reviews.sass
@@ -1,5 +1,5 @@
 .reviews
-  padding: 40px 0 70px 0
+  padding: 9px 0 70px 0
   &-title
     margin-bottom: 70px
   &__title
@@ -11,6 +11,9 @@
     text-transform: uppercase
     
   &-slider
+    height: 300px
+    width: 97%
+
     &__item
       position: relative
       display: flex
@@ -74,13 +77,14 @@
       height: 90px
       border-radius: 50%
       object-fit: cover   
-      margin-bottom: 9px 
+      margin-bottom: 0 
     &__username  
       font-style: normal
       font-weight: bold
       font-size: 12px
       line-height: 15px
       color: $primary
+      margin-top: 8px
       margin-bottom: 10px
     &__date
       font-style: normal
