--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -1,5 +1,5 @@
 .hotel
-  padding-top: 23px
+  padding-top: 15px
   padding-bottom: 70px
 
   &-info
@@ -14,7 +14,7 @@
       margin-top: 4px
       margin-bottom: 0
     &__description
-      margin: 5px 0  
+      margin: 0  
   &-name
       text-transform: uppercase
       font-size: 24px
@@ -113,7 +113,10 @@
   border-radius: 8px
   width: 350px
   min-height: 210px
-  padding: 28px
+  padding-top: 28px
+  padding-bottom: 28px
+  padding-left: 23px
+  padding-right: 26px
   &__info
     display: flex
     justify-content: space-between
@@ -130,7 +133,7 @@
     font-style: normal
     font-weight: 800
     font-size: 24px
-    line-height: 33px
+    line-height: 27px
   &__per-room 
     font-style: normal
     font-weight: normal
