--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -7,6 +7,11 @@ body
 .container
   max-width: 1110px
   margin: auto
+
+a:hover 
+  color: $primary
+  text-decoration: underline
+
 img
   max-width: 100%
     
