--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -28,12 +28,13 @@
       grid-column: span 2      
   &__contact
     &-details
+      margin-top: 10px
       grid-column: span 2 
     &-form
       grid-column: span 2  
       margin-bottom: 62px  
-
-        
+  &__legal
+    padding-left: 70px        
  
   &__ul
     padding: 0
@@ -56,13 +57,13 @@
     font-style: normal
     font-weight: normal
     font-size: 14px
-    line-height: 160%
+    line-height: 156%
     color: $footer-text-color
     &--mb-2
       margin-bottom: 22px
   &__icon
     &-wrapper
-      min-width: 25px  
+      min-width: 40px  
   &__text
     color: $footer-text-color
     margin-bottom: 22px
@@ -91,6 +92,7 @@
       grid-row: 5
       grid-column: 1 / 5
       display: flex
+      padding-top: 15px
     &-blank 
       width: 20%
     &-text
@@ -126,14 +128,14 @@
     width: 136px
     height: 22px 
 
-.logo
-  width: 166px   
-  &__info
-    font-style: normal
-    font-weight: bold
-    font-size: 12px
-    line-height: 15px
-    color: #E0E0E0     
+  &__logo
+    width: 150px   
+    &__info
+      font-style: normal
+      font-weight: bold
+      font-size: 12px
+      line-height: 15px
+      color: #E0E0E0     
      
       
 
