--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -364,6 +364,7 @@
       grid-row: 4
       grid-column: 1
     &__legal
+      padding-left: 0
       grid-row: 5
       grid-column: span 1
     &__input
