fix: form validation

--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -62,7 +62,7 @@
     border: none
 .button
   padding-top: 12px
-  padding-button: 7px    
+  padding-bottom: 7px    
 .user
   display: flex
   align-items: center
