--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -18,7 +18,12 @@
       &-group
         flex-basis: 100%  
 
-
+@media ( min-width: 992px )
+  a:hover 
+    color: $primary
+    text-decoration: underline
+  button:hover
+    background-color: darken($primary, 10%)  
 
 @media ( max-width: 992px )
 
