--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -3,6 +3,10 @@
   color: $light
   padding-top: 108px
   padding-bottom: 46px
+  &>invalid
+    height: 68px
+
+  
   &-wrapper
     display: grid
     grid-template-columns: repeat(4, minmax(min-content, 1fr))
@@ -13,6 +17,7 @@
     display: flex
     grid-row: 1 / 3  
     align-self: stretch
+   
   &__categories
     grid-row: 1 / 4
   &__social
@@ -75,6 +80,7 @@
     &-group
       margin-bottom: 15px
       flex-basis: 48%
+
   &__message
     resize: both
     width: 539px
