--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -12,7 +12,7 @@
         object-fit: cover
   .card  
     width: 230px
-    height: 230px
+    min-height: 230px
   .footer
     &__input
       &-group
@@ -83,7 +83,7 @@
 
   .card
     width: 340px
-    height: 250px   
+    min-height: 250px   
   
   .footer
     &__logo
@@ -281,7 +281,7 @@
 
   .card
     width: 49%
-    height: 255px  
+    min-height: 255px  
 
   .footer
 
