--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -75,7 +75,12 @@
       &--prev
         left: 18px     
         background-image: url(../img/arrow-prev.svg)  
-  
+  &-return
+    padding: 7px
+  &-return:hover
+    color: $light
+    text-decoration: none
+    background-color: darken($primary, 10%)  
 
 
 .stars
