--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -29,6 +29,8 @@
     font-size: 24px
     line-height: 30px
     &__strong
+      max-width: 380px
+      padding-right: 10px
       display: block
       font-size: 36px
       line-height: 45px
