--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -49,6 +49,7 @@ img
   border: none
   border-radius: 4px  
   cursor: pointer
+  text-decoration: none
 form
   display: flex
   align-items: center
