--- a/sass/blocks/_activities.sass
+++ b/sass/blocks/_activities.sass
@@ -17,7 +17,7 @@
   align-items: flex-start
   padding: 24px 26px
   width: 255px
-  height: 255px
+  min-height: 255px
   border-radius: 6px
   overflow: hidden
   &::before
